...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="100sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="400dp"
        android:gravity="center"
        android:hint="Enter Zip Code"
        android:layout_above="@+id/searchPropertiesButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/searchPropertiesButton"
        android:layout_width="wrap_content"
...
